# package-dev-tools

./: .bumpversion.cfg  .gitignore  .libcst.codemod.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-seed.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  template-Makefile
.github/: dependabot.yml
.github/workflows/: build.yml  bump-version.yml  instantiate-new-project.yml  manual-publish.yml  publish-dev.yml  sync-template.yml  trigger-template-sync.yml
actions/bump-version/: action.yml
actions/instantiate-new-project/: action.yml
actions/instantiate-new-project/cleanup-readme/: action.yml
actions/instantiate-new-project/cleanup-workflows/: action.yml
actions/instantiate-new-project/substitute-names/: action.yml
actions/publish/: action.yml
actions/publish/npm/: action.yml
actions/publish/start-publish/: action.yml
actions/publish/start-publish/pypi/: action.yml
actions/setup-python/: action.yml
actions/setup/environment/: action.yml
actions/setup/extract-python-versions/: action.yml
actions/template-sync/: action.yml
actions/trigger-template-sync/: action.yml
actions/validate/: action.yml
actions/validate/package/: action.yml
actions/validate/pre-commit/: action.yml
actions/validate/start/: action.yml
actions/validate/start-containerized/: action.yml
actions/validate/tests/: action.yml
config/: bumpversion.cfg  template-Makefile
scripts/pre-commit/: bump_version.sh  bump_version_on_main.sh  report_coverage.sh
src/dev_tools/: __init__.py
src/dev_tools/actions/: cleanup_readme.py  substitute_template_name.py  trigger_template_sync.py
src/dev_tools/cli/: cleanup_readme.py  entry_point.py  substitute_template_name.py  trigger_template_sync.py  update_coverage_badge.py
src/dev_tools/interfaces/cli/: check_coverage.py  substitute_template_name.py
src/dev_tools/main/: main.py
src/dev_tools/models/: path.py
src/dev_tools/pre_commit/: check_coverage.py  update_coverage_badge.py
src/dev_tools/utils/: __init__.py
src/dev_tools/utils/package/: __init__.py  utils.py
src/dev_tools/utils/tests/: __init__.py  utils.py
src/package_dev_tools/actions/: substitute_template_name.py  trigger_template_sync.py
src/package_dev_tools/actions/instantiate_new_project/: __init__.py  cleanup_readme.py  cleanup_workflows.py  git.py  instantiate_new_project.py
src/package_dev_tools/actions/instantiate_new_project/substitute_template_name/: __init__.py  project.py  substitute_template_name.py
src/package_dev_tools/actions/substitute_template_name/: __init__.py  path.py  project.py  substitute_template_name.py
src/package_dev_tools/actions/template_sync/: git.py  merge.py  sync.py  sync_template.py  trigger.py
src/package_dev_tools/cli/: check_coverage.py  check_shields.py  cleanup_readme.py  entry_point.py  export_pre_commit_config.py  extract_package_name.py  extract_required_python_version.py  extract_supported_python_versions.py  instantiate_new_project.py  substitute_template_name.py  sync_template.py  trigger_template_sync.py
src/package_dev_tools/context/: __init__.py  context.py
src/package_dev_tools/interfaces/cli/: check_coverage.py  cleanup_readme.py  substitute_template_name.py  trigger_template_sync.py
src/package_dev_tools/main/: main.py
src/package_dev_tools/models/: path.py
src/package_dev_tools/pre_commit/: check_coverage.py  check_import.py  check_shields.py  expand_docstrings.py  export_config.py
src/package_dev_tools/utils/: badge.py  package.py
src/package_dev_tools/utils/package/: utils.py
src/package_dev_tools/utils/tests/: utils.py
src/python_package_template/cli/: entry_point.py
tests/: conftest.py  environment.py  test_cli_entry_point.py  test_coverage_check.py  test_entry_points.py  test_main.py  test_update_coverage_badge.py
tests/actions/: test_instantiate_new_project.py  test_merge.py  test_sync_template.py
tests/actions/substitute_template_name/: test_naming_checking.py  test_naming_conversions.py  test_substitute_template_name.py
tests/cli/: test_entry_points.py
tests/entry_points/: test_entry_points.py
tests/pre_commit/: conftest.py  test_coverage_check.py  test_expand_docstrings.py
tests/substitute_template_name/: test_naming_checking.py  test_naming_conversions.py  test_substitute_template_name.py
tests/utils/: test_badge.py  test_package_info.py  test_utils.py
