[project]
name = "package-dev-tools"
version = "0.1.0"
description = "Template for Python package published on PyPI"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "package-utils[context] >=0.5.0, <1",
]

[project.optional-dependencies]
dev = [
    "package-dev-tools >=0.3.0, <1",
    "package-dev-utils >=0.1.0, <1",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/package-dev-tools"

[project.scripts]
package-dev-tools = "package_dev_tools.cli:entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
precision = 4
fail_under = 100

[tool.mypy]
strict = true
no_implicit_reexport = false
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]
fix = true

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.package-data]
package_dev_tools = ["py.typed"]
