[project]
name = "package-dev-tools"
version = "0.7.1"
description = "CI/CD tools for Python packages"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "package-utils >=0.6.1, <1",
    "powercli >=0.1.2, <1",
    "pygithub >=2.1.1, <3",
    "python-slugify >=8.0.1, <9",
    "simple-classproperty >=4.0.2, <5",
    "superpathlib >=2.0.0, <3",
    "toml >=0.10.2, <1",

    # pre-commit binaries
    "autotyping >=23.3.0, <25",
    "bump2version >=1.0.1, <2",
    "coverage >=7.4.0, <8",
    "libcst >= 1.7.0, <2",
    "pre-commit >=3.5.0, <5",
    "pytest >=7.4.3, <9",

    # formatting binaries, stricter version range
    "docformatter >=1.7.5, <1.8",
    "mypy >= 1.15.0, <1.16",
    "ruff >=0.11.8, <0.12"
]

[project.optional-dependencies]
dev = [
    "hypothesis >=6.91.0, <7",
    "package-dev-utils >=0.1.6, <1",

    # mypy
    "types-requests >=2.31.0.10, <3",
    "types-toml >=0.10.8.7, <1",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/package-dev-tools"

[project.scripts]
check-coverage = "package_dev_tools.cli.check_coverage:entry_point"
check-import = "package_dev_tools.pre_commit.check_import:entry_point"
check-shields = "package_dev_tools.cli.check_shields:entry_point"
cleanup-readme = "package_dev_tools.cli.cleanup_readme:entry_point"
export-pre-commit-config = "package_dev_tools.cli.export_pre_commit_config:entry_point"
extract-package-name = "package_dev_tools.cli.extract_package_name:entry_point"
extract-required-python-version = "package_dev_tools.cli.extract_required_python_version:entry_point"
extract-supported-python-versions = "package_dev_tools.cli.extract_supported_python_versions:entry_point"
instantiate-new-project = "package_dev_tools.cli.instantiate_new_project:entry_point"
substitute-template-name = "package_dev_tools.cli.substitute_template_name:entry_point"
sync-template = "package_dev_tools.cli.sync_template:entry_point"
trigger-template-sync = "package_dev_tools.cli.trigger_template_sync:entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest tests"

[tool.coverage.report]
precision = 4
fail_under = 100

[tool.mypy]
strict = true
no_implicit_reexport = false

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",   # annotated with Any
    "D",        # docstrings
    "G004",     # logging f-string
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]  # assert used

[tool.setuptools]
script-files = [
    "bin/pre-commit/bump-version",
    "bin/pre-commit/check-version",
]

[tool.setuptools.package-data]
package_dev_tools = ["py.typed"]
